// Copyright Â© 2023 OpenIM open source community. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package openim.common;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/openimsdk/chat/pkg/protocol/common";

message UserFullInfo{
  string  userID = 1;
  string  account = 2;
  string  nickname = 3;
  string  faceURL = 4;
  string  about = 5;
  string  coverURL = 6;
  string  address = 7;
  string  publicKey = 13;
  google.protobuf.Timestamp  createTime = 14;
  int32  allowAddFriend = 8;
  int32  allowBeep = 9;
  int32  allowVibration = 10;
  int32 globalRecvMsgOpt = 11;
  int32 registerType = 12;
}

message UserPublicInfo{
  string  userID = 1;
  string  account = 2;
  string  nickname = 3;
  string  faceURL = 4;
  string  about = 5;
  string  coverURL = 6;
  string  address = 7;
  string  publicKey = 8;
}

message UserIdentity {
  string address = 1;
  string deviceID = 2;
  int32 platform = 3;
  string account = 4;
}


message AppletInfo  {
  string id = 1;
  string name = 2;
  string appID = 3;
  string icon = 4;
  string url = 5;
  string md5 = 6;
  int64 size = 7;
  string version = 8;
  uint32 priority = 9;
  uint32 status = 10;
  int64 createTime = 11;
}

message LogInfo{
  string userID=1;
  int32 platform=2;
  string url=3;
  int64 createTime=4;
  string nickname=5;
  string logID=6;
  string filename=7;
  string systemType=8;
  string ex=9;
  string version=10;
}

message PostAtUserInfo {
  string userID = 1;
  string nickname = 2;
  string account = 3;
}

message PostMedia {
  int32 mediaType = 1;
  PictureElem postPicture = 2;
  VideoElem postVideo = 3;
}


message PictureBaseInfo {
  string uuid = 1;
  string type = 2;
  int64 size = 3;
  int32 width = 4;
  int32 height = 5;
  string url = 6;
}

message PictureElem {
  string sourcePath = 1;
  PictureBaseInfo sourcePicture = 2;
  PictureBaseInfo bigPicture = 3;
  PictureBaseInfo snapshotPicture = 4;
}

message VideoElem {
  string videoPath = 1;
  string videoUUID = 2;
  string videoUrl = 3;
  string videoType = 4;
  int64 videoSize = 5;
  int64 duration = 6;
  string snapshotPath = 7;
  string snapshotUUID = 8;
  int64 snapshotSize = 9;
  string snapshotUrl = 10;
  int32 snapshotWidth = 11;
  int32 snapshotHeight = 12;
  string snapshotType = 13;
}